FirstGitProj/src/objects/Ticket__c.object
<CustomObject>
    <description>Object used for internal users to log issues they encounter with using Salesforce, or to log suggestions.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Free from rich area text field for internal user to explain the issue/suggestion in further detail.</description>
        <inlineHelpText>Please explain the issue or suggestion you wish to share.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <description>User will select from which device he/she noticed the issue or suggestion</description>
        <inlineHelpText>Please select the device used when the issue or suggestion occurred.</inlineHelpText>
        <label>Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectImpacted__c</fullName>
        <description>Use this field to select in which object the issue resides.</description>
        <inlineHelpText>Select the object in which you are experiencing the issue or concern.</inlineHelpText>
        <label>Object Impacted</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Sales Apps</fullName>
                </value>
                <value>
                    <fullName>Settings</fullName>
                </value>
                <value>
                    <fullName>Tasks/Log A Call/Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <description>Field for user to select how serious this issue or concern is.</description>
        <inlineHelpText>If your request does not meet the Severity Level criteria as defined above, Support may re-classify it as appropriate.</inlineHelpText>
        <label>Severity Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 5 - Minimal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Level 4 - Normal</fullName>
                </value>
                <value>
                    <fullName>Level 3 - High</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Urgent</fullName>
                </value>
                <value>
                    <fullName>Level 1 - Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status field is for admins ONLY - those who are working on addressing the internal users&apos; issues should be the only ones editing this field.</description>
        <inlineHelpText>Status of your Ticket</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending User</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Re-Opened</fullName>
                </value>
                <value>
                    <fullName>Resolving</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Internal user will enter the subject of the issue here.</description>
        <inlineHelpText>Please enter a subject for this ticket.</inlineHelpText>
        <label>Subject</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ObjectImpacted__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Device__c</columns>
        <columns>ObjectImpacted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Tickets</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>Choose &quot;Issue&quot; if you encounter potential errors or problems with the system.</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggestion</fullName>
        <active>true</active>
        <description>Choose &quot;Suggestion&quot; if you wish submit a suggestion for system enhancement.</description>
        <label>Suggestion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>